
CHANGE: Core  | Revised piece picking code to deal better with some edge cases and snubbed peers [The 8472]
CHANGE: UI    | Added private torrent indicator to the general tab [The 8472]
CHANGE: Core  | Attempt to re-open a file when access fails to try and recover from a transient error [Parg]
CHANGE: Core  | Auto speed default is now the beta algorithm [Parg]

BUGFIX: UI    | Don't hang UI redraw if file access is slow [Parg]

2007.10.04 | Azureus 3.0.3.4

FEATURE: UI   | Added "All Peers" view [amc1]

CHANGE: Core  | Added workarounds for some buggy UPnP router implementations [parg]
CHANGE: UI    | NAT status bar indicator and health icons now ignore UDP and LAN-local connections [The 8472]

BUGFIX: Core  | Fixed bug where a torrent's save location is "forgotten" when a recheck is done in some circumstances [amc1]
BUGFIX: UI    | times > 365 days (such as the uptime) are now displayed properly [The 8472]



2007.09.21 | Azureus 3.0.3.2

BUGFIX: Core  | Fixed MacOSX playback bug [TuxPaper]
BUGFIX: Core  | Fixed update restart bug [Parg]



2007.09.20 | Azureus 3.0.3.0

FEATURE: Core | Added experimental support for LibTorrent extension protocol handshake [amc1]
FEATURE: Core | Providing some experimental options for possible workarounds for a particular traffic shaping method
                 See http://www.azureuswiki.com/index.php/Avoid_traffic_shaping#Level_5 for further details 
FEATURE: UI   | Added available disk space indicators to the torrent open dialog (requires Java 1.6) [The 8472]
FEATURE: UI   | Added "handshake reserved bytes" column in peer view [amc1]
FEATURE: UI   | Added "Open Transfer Bar on start" and "Remember Transfer Bar" location options [amc1]
FEATURE: UI   | Added http-seed config to torrent creation wizard [Parg]
FEATURE: UIv3 | Embedded Media Player [TuxPaper] 

CHANGE: Core  | Speedup hash-checking by ~30% / less CPU usage [The 8472]
CHANGE: Core  | More improvements to client identification code [amc1]